<resources>
    <string name="app_name">Videospeil</string>
    <string name="game_poster">Game Poster</string>
    <string name="game_title">Game title</string>
    <string name="no_results_found">No Results Found</string>
    <string name="retry">Retry</string>
    <string name="result_could_not_be_loaded">Result could not be loaded</string>
    <string name="game_list">Game List</string>
    <string name="log_out">Log out</string>
    <string name="enter_email">Enter email</string>
    <string name="your_favourites_here">Your Favourites here</string>
    <string name="results_could_not_be_loaded">Results could not be loaded</string>
    <string name="go_to_page">Go To Page</string>
    <string name="favourites">Favourites</string>
    <string name="see_posts">See Posts</string>
    <string name="create_post">Create Post</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login_in">Login in</string>
    <string name="need_new_account">Need new Account?</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="register">Register</string>
    <string name="enter_message">Enter message</string>
    <string name="login">Login</string>
    <string name="some_glimpses">Some Glimpses-</string>
    <string name="video_clip">Video Clip-</string>
    <string name="no_favourites_yet">No Favourites Yet</string>
    <string name="enter_name">Enter Name</string>
    <string name="create_video_content">Create Video Content</string>
    <string name="poster_name">Poster Name</string>
    <string name="the_details_of_your_post_appear_here">The details of your post appear here</string>
    <string name="comment">Comments</string>
    <string name="commenter_name">Commenter name</string>
    <string name="comment_sample">A cricket bat is a specialised piece of equipment used by batters in the sport of cricket to hit the ball, typically consisting of a cane handle attached to a flat-fronted willow-wood blade. It may also be used by a batter who is making their ground to avoid a run out, if they hold the bat and touch the ground with it. The length of the bat may be no more than 38 inches (965 mm) and the width no more than 4.25 inches (108 mm). Its use is first mentioned in 1624.</string>
    <string name="enter_comment">Enter comment</string>
    <string name="sideways_scrollable">(Sideways scrollable)</string>
    <string name="allow_some_time_for_video_to_load">(Allow some time for video to load)</string>
    <string name="upload">Upload</string>
    <string name="upload_video">Upload Video</string>
    <string name="games_lobby">Games Lobby</string>
</resources>