<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_700"
    tools:context=".ui.PostsFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/posts_display_layout" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/txt_error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/retry_btn"
        android:text="@string/result_could_not_be_loaded"
        android:textAlignment="center"
        android:textColor="@color/mypink"
        android:textSize="20sp"
        android:textStyle="italic"
        android:visibility="gone"
        tools:visibility="visible" />

    <Button
        android:id="@+id/retry_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp"
        android:text="@string/retry"
        android:visibility="gone"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/no_results_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/retry_btn"
        android:text="@string/no_results_found"
        android:textAlignment="center"
        android:textColor="@color/mypink"
        android:textSize="20sp"
        android:textStyle="italic"
        android:visibility="gone"
        tools:visibility="visible" />
</RelativeLayout>