<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/myblack"
    tools:context=".authentication.LoginFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/app_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:src="@drawable/logo" />

            <EditText
                android:id="@+id/email_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/app_icon"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="30dp"
                android:background="@color/mypink"
                android:backgroundTint="@color/white"
                android:drawableStart="@drawable/email"
                android:drawablePadding="10dp"
                android:drawableTint="@color/mypink"
                android:hint="@string/email"
                android:padding="10dp"
                android:textColor="@color/mypink"
                android:textColorHint="#ff0000"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/password_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/email_text_view"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="30dp"
                android:background="@color/mypink"
                android:backgroundTint="@color/white"
                android:drawableStart="@drawable/password"
                android:drawablePadding="10dp"
                android:drawableTint="@color/mypink"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textColor="@color/mypink"
                android:textColorHint="#ff0000"
                android:textSize="20sp" />

            <Button
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/password_text_view"
                android:layout_marginStart="50dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="50dp"
                android:text="@string/login_in"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/need_new_account_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/login_button"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="30dp"
                android:text="@string/need_new_account"
                android:textAlignment="center"
                android:textColor="@color/mypink"
                android:textSize="20sp" />
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>