<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgdetails"
    android:descendantFocusability="blocksDescendants"
    tools:context=".ui.PostsDetailsFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:descendantFocusability="blocksDescendants">

            <TextView
                android:id="@+id/poster_name_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="30dp"
                android:padding="10dp"
                android:paddingStart="20dp"
                android:text="@string/poster_name"
                android:textColor="@color/mypink"
                android:textSize="35sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/message_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/poster_name_text_view"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:padding="10dp"
                android:text="@string/the_details_of_your_post_appear_here"
                android:textColor="@color/mypink"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/created_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="Created on - "
                android:textSize="13sp"
                android:paddingStart="30dp"
                android:layout_below="@id/message_text_view"
                android:layout_marginStart="10dp"
                android:textColor="@color/mypink"
                />

            <TextView
                android:id="@+id/comments_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/create_comment_text_view"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="30dp"
                android:text="@string/comment"
                android:textColor="@color/mypink"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/create_comment_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/message_text_view"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:background="@color/purple_500"
                android:padding="5dp"
                android:text="Comment?"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/comments_text_view"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/comments_display_layout" />
        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>
</RelativeLayout>